# civic-associations-usa-19c

./: .env.example  .gitignore  GITHUB_ACTIONS_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
.github/workflows/: test-docling-extraction.yml
config/: extraction.yaml  ocr.yaml  project.yaml  verification.yaml
data/interim/extractions/buffalo_1862/: run_4c042ea3.jsonl  run_7df15efa.jsonl
data/interim/ocr/buffalo_1862/: buffalo_1862_p001.md  buffalo_1862_p002.md  buffalo_1862_p003.md
data/interim/sections/buffalo_1862/: sections.jsonl
data/raw/buffalo_1862/: manifest.jsonl
docs/: architecture.md  data_dictionary.md  github-actions-workflow.md  quickstart.md
notebooks/: 01_ocr_quality.ipynb  02_prompt_tuning.ipynb  03_analysis_networks.ipynb
scripts/: build_manifest.py  export_for_analysis.py  extract_associations.py  find_sections.py  run_ocr.py  verify_and_load.py
src/civic_associations/: __init__.py  config.py  models.py
src/civic_associations/db/: __init__.py  schema.py  writer.py
src/civic_associations/extraction/: __init__.py  extractor.py  llm_client.py  prompts.py
src/civic_associations/ingestion/: __init__.py  file_naming.py  manifest_builder.py
src/civic_associations/ocr/: __init__.py  docling_client.py  ocr_runner.py  section_finder.py
src/civic_associations/utils/: __init__.py  hashing.py  io.py  logging.py
src/civic_associations/verification/: __init__.py  rules.py  similarity.py
tests/: test_extractor.py  test_manifest_builder.py  test_section_finder.py  test_verification.py
